// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser parse - no replacer 1`] = `
RootNode {
  "children": Array [
    TextNode {
      "pos": Object {
        "end": 9,
        "start": 0,
      },
      "text": "
content
",
      "type": "text",
    },
  ],
  "pos": Object {
    "end": 9,
    "start": 0,
  },
  "type": "root",
}
`;

exports[`parser parse - one replacer 1`] = `
RootNode {
  "children": Array [
    TextNode {
      "pos": Object {
        "end": 11,
        "start": 0,
      },
      "text": "
content 1
",
      "type": "text",
    },
    ReplacePartNode {
      "children": Array [
        TextNode {
          "pos": Object {
            "end": 41,
            "start": 30,
          },
          "text": "
content 2
",
          "type": "text",
        },
      ],
      "end": ReplaceEndToken {
        "name": "foo",
        "pos": Object {
          "end": 58,
          "start": 41,
        },
        "raw": "<!-- end: foo -->",
        "type": "replace-end",
      },
      "name": "foo",
      "pos": Object {
        "end": 58,
        "start": 11,
      },
      "start": ReplaceStartToken {
        "name": "foo",
        "pos": Object {
          "end": 30,
          "start": 11,
        },
        "raw": "<!-- start: foo -->",
        "type": "replace-start",
      },
      "type": "replace-part",
    },
    TextNode {
      "pos": Object {
        "end": 59,
        "start": 58,
      },
      "text": "
",
      "type": "text",
    },
  ],
  "pos": Object {
    "end": 59,
    "start": 0,
  },
  "type": "root",
}
`;

exports[`parser parse - two replace - same line 1`] = `
RootNode {
  "children": Array [
    TextNode {
      "pos": Object {
        "end": 8,
        "start": 0,
      },
      "text": "
before
",
      "type": "text",
    },
    ReplacePartNode {
      "children": Array [
        TextNode {
          "pos": Object {
            "end": 32,
            "start": 27,
          },
          "text": "
foo
",
          "type": "text",
        },
      ],
      "end": ReplaceEndToken {
        "name": "foo",
        "pos": Object {
          "end": 49,
          "start": 32,
        },
        "raw": "<!-- end: foo -->",
        "type": "replace-end",
      },
      "name": "foo",
      "pos": Object {
        "end": 49,
        "start": 8,
      },
      "start": ReplaceStartToken {
        "name": "foo",
        "pos": Object {
          "end": 27,
          "start": 8,
        },
        "raw": "<!-- start: foo -->",
        "type": "replace-start",
      },
      "type": "replace-part",
    },
    TextNode {
      "pos": Object {
        "end": 56,
        "start": 49,
      },
      "text": "between",
      "type": "text",
    },
    ReplacePartNode {
      "children": Array [
        TextNode {
          "pos": Object {
            "end": 78,
            "start": 75,
          },
          "text": "bar",
          "type": "text",
        },
      ],
      "end": ReplaceEndToken {
        "name": "bar",
        "pos": Object {
          "end": 95,
          "start": 78,
        },
        "raw": "<!-- end: bar -->",
        "type": "replace-end",
      },
      "name": "bar",
      "pos": Object {
        "end": 95,
        "start": 56,
      },
      "start": ReplaceStartToken {
        "name": "bar",
        "pos": Object {
          "end": 75,
          "start": 56,
        },
        "raw": "<!-- start: bar -->",
        "type": "replace-start",
      },
      "type": "replace-part",
    },
    TextNode {
      "pos": Object {
        "end": 100,
        "start": 95,
      },
      "text": "after",
      "type": "text",
    },
  ],
  "pos": Object {
    "end": 100,
    "start": 0,
  },
  "type": "root",
}
`;

exports[`parser parse - two replacer 1`] = `
RootNode {
  "children": Array [
    TextNode {
      "pos": Object {
        "end": 11,
        "start": 0,
      },
      "text": "
content 1
",
      "type": "text",
    },
    ReplacePartNode {
      "children": Array [
        TextNode {
          "pos": Object {
            "end": 41,
            "start": 30,
          },
          "text": "
content 2
",
          "type": "text",
        },
      ],
      "end": ReplaceEndToken {
        "name": "foo",
        "pos": Object {
          "end": 58,
          "start": 41,
        },
        "raw": "<!-- end: foo -->",
        "type": "replace-end",
      },
      "name": "foo",
      "pos": Object {
        "end": 58,
        "start": 11,
      },
      "start": ReplaceStartToken {
        "name": "foo",
        "pos": Object {
          "end": 30,
          "start": 11,
        },
        "raw": "<!-- start: foo -->",
        "type": "replace-start",
      },
      "type": "replace-part",
    },
    TextNode {
      "pos": Object {
        "end": 69,
        "start": 58,
      },
      "text": "
content 3
",
      "type": "text",
    },
    ReplacePartNode {
      "children": Array [
        TextNode {
          "pos": Object {
            "end": 99,
            "start": 88,
          },
          "text": "
content 4
",
          "type": "text",
        },
      ],
      "end": ReplaceEndToken {
        "name": "bar",
        "pos": Object {
          "end": 116,
          "start": 99,
        },
        "raw": "<!-- end: bar -->",
        "type": "replace-end",
      },
      "name": "bar",
      "pos": Object {
        "end": 116,
        "start": 69,
      },
      "start": ReplaceStartToken {
        "name": "bar",
        "pos": Object {
          "end": 88,
          "start": 69,
        },
        "raw": "<!-- start: bar -->",
        "type": "replace-start",
      },
      "type": "replace-part",
    },
    TextNode {
      "pos": Object {
        "end": 127,
        "start": 116,
      },
      "text": "
content 5
",
      "type": "text",
    },
  ],
  "pos": Object {
    "end": 127,
    "start": 0,
  },
  "type": "root",
}
`;
